--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,9 @@ website:
     left:
       - icon: github
         href: https://github.com/ytyeh/ytyeh.github.io
+  open-graph: 
+    title: "Yun-Ting Yeh | PhD Candidate in Environmental Econ & IO"
+    image: "images/pic_horizontal.png"
 
 format:
   html:
@@ -29,11 +32,6 @@ format:
     css:
       - "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     toc: true
-    include-meta:
-      description: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
-      og:title: "Yun-Ting Yeh"
-      og:description: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
-      og:url: https://ytyeh.github.io/
 
 editor: visual
 
