--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,6 @@ project:
 
 website:
   title: "Yun-Ting Yeh"
-  description: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
   site-url: https://ytyeh.github.io/
   navbar:
     right:
@@ -32,7 +31,8 @@ format:
     css:
       - "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     toc: true
-
+    description-meta: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
+    
 editor: visual
 
 execute:
