--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ website:
         href: https://github.com/ytyeh/ytyeh.github.io
   open-graph: 
     title: "Yun-Ting Yeh | PhD Candidate in Environmental Econ & IO"
+    description: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
     image: "images/pic_horizontal.png"
 
 format:
