--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,8 +12,9 @@ website:
       - href: index.qmd
         text: Home
       - research.qmd
+      - teaching.qmd
   page-footer: 
-    right: "Last updated: July 14, 2025" 
+    right: "Last updated: September 7, 2025" 
     left:
       - icon: github
         href: https://github.com/ytyeh/ytyeh.github.io
