--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
         text: CV
         target: _blank
   page-footer:
-    right: "Last updated: September 8, 2025" 
+    right: "Last updated: September 12, 2025" 
     left:
       - icon: github
         href: https://github.com/ytyeh/ytyeh.github.io
@@ -25,6 +25,7 @@ website:
     title: "Yun-Ting Yeh | PhD Candidate in Environmental Econ & IO"
     description: "PhD candidate in environmental economics and industrial organization at the University of Arizona."
     image: "images/pic_horizontal.png"
+  google-analytics: "G-KL02F357QJ"
 
 format:
   html:
